2007-05-23  Ethan Merritt  <merritt@u.washington.edu>

	* term/svg.trm: Give font sizes explicitly in pt units.

	* term/svg.trm: Subscript/superscripts position must be done using
	relative offsets, not absolute offset. Otherwise it prematurely 
	terminates the scope of the surrounding "chunk" of text.

2007-05-22  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/command.c (pause_command): On Windows, "pause -1" does not work
	if it is the 1st command in a script. Bug #1713350.

2007-05-22  Matthias Habl  <mhabl@users.sourceforge.net>

	* docs/gnuplot.doc: Clarify that all x and y axis labels may be 
	rotated, but only in 2D and only for terminals that support it.

2007-05-22  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/wxt_gui.cpp (wxt_sigint_restore): properly pass a
	pointer to signal()

	* src/wxterminal/wxt_gui.cpp:
	* src/wxterminal/wxt_gui.h:
	Introduce macros WXT_MULTITHREADED and WXT_MONOTHREADED to simplify the
	code here and there.
	Introduce wxtApp::SendEvent and wxtFrame::SendEvent that are wrappers
	to AddPendingEvent (asynchronous) or ProcessEvent (synchronous)
	respectively in the multi- or monothreaded cases.
	(wxt_init, wxtApp::OnCreateWindow): Do the window creation in the GUI
	thread (in the multithreaded case) by sending an event.
	This is preparatory work for wxMac support.

2007-05-19  Ethan Merritt  <merritt@u.washington.edu>

	* demo/fillcrvs.dem:  Add world map as demo of closed filled curves
	from a file.

	* src/set.c (set_decimal): Follow POSIX standard with regard to finding
	the value of LC_NUMERIC from the environment. Use the first match to
	LC_ALL, LC_NUMERIC, or LANG.
	Bug #1692541

2007-05-18  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/wxt_gui.cpp:
	* src/wxterminal/wxt_gui.h:
	Cleanup the way wxExitLoop events are sent on exit.

2007-05-17  Ethan Merritt  <merritt@u.washington.edu>

	* src/win/wgraph.c (GraphClose) src/wxterminal/wxt_gui.cpp (OnClose):